tests/semantic/invalid/get-literal.inox
Module GetLiteralInvalid

Main :
    Get(10)
;
